<resources>
    <string name="app_name">App1</string>
    <string name="hint_email">Iniciar sesión</string>
    <string name="hint_correo">Correo electrónico</string>
    <string name="hint_contra2">Contraseña</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="portal">Portal</string>
    <string name="piso">Piso</string>
    <string name="telefono">Telefono</string>
    <string name="email">Email</string>
    <string name="contrase_a">Contraseña</string>
    <string name="registrar">Registrar</string>
    <string name="my_image_description">logo_san_miguel</string>
    <string name="inicioPadel">Pista de Pádel</string>
    <string name="disponibilidad">Disponibilidad</string>
    <string name="horariosDisponiblesScroll">Lista de horarios disponibles</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_comunicados">Comunicados</string>
    <string name="menu_profile">Perfil</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="notificaciones_por_email">Notificaciones por Email</string>
    <string name="notificaciones_push">Notificaciones Push</string>
    <string name="configuraci_n">Configuración</string>
    <string name="no_comunicados">No hay comunicados disponibles</string>
    <string name="no_reservas">"No tiene reservas "</string>
    <string name="error_cargando_reservas">Error cargando reservas</string>
    <string name="error_cargando_comunicados">Error cargando comunicados</string>
    <string name="login">Iniciar sesión</string>
    <string name="login_not_registered">¿No estás registrado? Crea una cuenta</string>
    <string name="password">Contraseña</string>
    <string name="fill_all_fields">Rellena todos los campos</string>
    <string name="login_prompt"><![CDATA[¿No estás registrado? Crea una <u>cuenta</u>]]></string>
    <string name="login_prompt_html"><![CDATA[¿No estás registrado? Crea una <u>cuenta</u>]]></string>
</resources>